--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ instant = "0.1.9"
 hotkey = "0.3.1"
 
 tracing = "0.1.26"
+
+serde =  { version = "1.0.126", features = [ "derive" ] }
+serde_json = "1.0.64"
