--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ tracing = "0.1.26"
 serde =  { version = "1.0.126", features = [ "derive" ] }
 serde_json = "1.0.64"
 serde_with = "1.9.2"
+
+lazy_static = "1.4.0"
