--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "uiexperiment"
+name = "devswap"
 version = "0.1.0"
 authors = ["Richard South <southy98@gmail.com>"]
 edition = "2018"
@@ -27,3 +27,7 @@ serde_json = "1.0.64"
 serde_with = "1.9.2"
 
 lazy_static = "1.4.0"
+
+[profile.release]
+lto = true
+
